--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
